# wireless-playground

./: CMakeLists.txt  arm-none-eabi-gcc.cmake  flash.sh
bsp/: CMakeLists.txt
bsp/artemis_weather/: CMakeLists.txt  wi_bsp.cpp
bsp/include/bsp/: wi_bsp.hpp
cmake/: am_sdk.cmake  arm-none-eabi-gcc.cmake  ext_printf.cmake  tflite_micro.cmake
drivers/: CMakeLists.txt
drivers/apds9960/: CMakeLists.txt
drivers/apds9960/include/drivers/: apds9960.hpp
drivers/sht3x/: CMakeLists.txt  sht3x.hpp
drivers/sht3x/include/drivers/: sht3x.hpp
include/: FreeRTOSConfig.h  hci_apollo_config.h
lib/: CMakeLists.txt
lib/ble_sensor_svc/: CMakeLists.txt  ble_sensor_svc.cpp  ble_sensor_svc.hpp
lib/logger/: CMakeLists.txt  wi_logger.cpp  wi_logger.hpp
port/: CMakeLists.txt
port/apollo/: CMakeLists.txt  linker.ld  port_gpio.cpp  port_i2c.cpp  port_startup.c  port_uart.cpp
port/include/hal/: port_gpio.hpp  port_i2c.hpp
port/include/port/: port_flash.hpp  port_gpio.hpp  port_i2c.hpp  port_uart.hpp
src/: ble_app.cpp  ble_app.hpp  freertos_hooks.cpp  libc_stubs.c  main.cpp  sensor_service.cpp  sensor_service.hpp  wi.hpp
